objects/Opportunity_Loss_Product__c.object
<CustomObject>
    <fields>
        <fullName>Net_Total__c</fullName>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Loss Products</relationshipLabel>
        <relationshipName>Opportunity_Loss_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Loss Products</relationshipLabel>
        <relationshipName>Opportunity_Loss_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Loss Product</label>
    <nameField>
        <displayFormat>OLP-{000000}</displayFormat>
        <label>Opportunity Loss Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Loss Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>